--- a/style.css
+++ b/style.css
@@ -138,3 +138,12 @@ span{
 .footer h3{
     color: gray;
 }
+.top-button{
+    text-decoration: none;
+    /* background-color: orange; */
+    background-image: linear-gradien(orange);
+    color: gray;
+    padding: 10px 30px;
+    border-radius: 5px;
+    font-weight: 700;
+}
