--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* menu section */
 
 body{
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Oswald', sans-serif;
     margin: 0;
     padding: 0;
     /* box-sizing: border-box; */
